# blackdogengine

./: .gitignore  CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/demo1/: .main.cpp.swp  CMakeLists.txt  main.cpp
demos/demo1/shaders/: fragment.frag  vertex.vert
demos/meta_system/: CMakeLists.txt  main.cpp
demos/stencil_planar_reflections/: CMakeLists.txt  main.cpp
demos/stencil_planar_reflections/shaders/: fragment.frag  vertex.vert
docs/: CMakeLists.txt  Doxyfile.in
source/: .CMakeLists.txt.swp  .Object.cpp.swo  .Object.cpp.swp  BasicApplication.cpp  BasicApplication.h  BlackDogEngine.cpp  BlackDogEngine.h  BlackDogEngineIncludes.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraSubsystem.cpp  CameraSubsystem.h  DataTypes.h  GOComponent.cpp  GOComponent.h  GOComponentHandle.cpp  GOComponentHandle.h  GOComponentTypeList.h  GOComponentTypes.h  GameObject.cpp  GameObject.h  Logger.cpp  Logger.h  Object.cpp  Object.h  RangeIteration.h  Rtti.cpp  Rtti.h  Singleton.h  Subsystem.cpp  Subsystem.h  TransformComponent.cpp  TransformComponent.h  Transformation.cpp  Transformation.h  TransformationSubsystem.cpp  TransformationSubsystem.h
source/Debug/: CMakeLists.txt  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h
source/Geometry/: CMakeLists.txt  ElementDataSource.cpp  ElementDataSource.h  Geometry.h  GeometryBase.cpp  GeometryBase.h  PrimitiveType.h  Vertex.cpp  Vertex.h  VertexDataSource.cpp  VertexDataSource.h  VertexDataSourceSemantics.h  VertexDescription.h  create_vertex_data_sources.h
source/MathLib/: AABoundingBox.cpp  AABoundingBox.h  AxisAngle.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  ChebyshevRatio.h  ColorRGB.cpp  ColorRGB.h  ColorRGBA.cpp  ColorRGBA.h  Constants.h  EulerAngles.h  GaussianElimination.h  Hyperplane.h  LexicoArray2.h  Line2.cpp  Line2.h  Line3.cpp  Line3.h  MathLib.h  MathLibConfigurations.h  MathUtils.cpp  MathUtils.h  Matrix.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray2.cpp  Ray2.h  Ray3.cpp  Ray3.h  Rectangle.cpp  (+17 more)
source/Meta/: Apply.cpp  Apply.h  ApplyToObject.h  AutoLister.h  CMakeLists.txt  Cast.h  FunctionSignature.cpp  FunctionSignature.h  GetMetaTypeByType.cpp  GetMetaTypeByType.h  If.h  MetaClass.cpp  MetaClass.h  MetaFunction.cpp  MetaFunction.h  MetaMemberFunction.cpp  MetaMemberFunction.h  MetaType.cpp  MetaType.h  MetaVariable.cpp  MetaVariable.h  NumericMetaType.cpp  NumericMetaType.h  TypeList.h  Variable.h
source/Rendering/: AlphaBlend.cpp  AlphaBlend.h  Bindable.cpp  Bindable.h  BindingInfo.cpp  BindingInfo.h  CMakeLists.txt  CullState.cpp  CullState.h  DepthBuffer.cpp  DepthBuffer.h  DrawGeometryRenderTask.cpp  DrawGeometryRenderTask.h  FrameBuffer.h  LoadGeometryRenderTask.cpp  LoadGeometryRenderTask.h  LoadShaderRenderTask.cpp  LoadShaderRenderTask.h  Material.cpp  Material.h  RenderPool.cpp  RenderPool.h  RenderState.cpp  RenderState.h  RenderStatesTypeList.h  RenderTask.cpp  RenderTask.h  Renderer.cpp  Renderer.h  RenderingDevice.h  SetBackgroundColorRenderTask.cpp  SetBackgroundColorRenderTask.h  SetCameraRenderTask.cpp  SetCameraRenderTask.h  SetMaterialRenderTask.cpp  SetMaterialRenderTask.h  SetShaderRenderTask.cpp  SetShaderRenderTask.h  Shader.cpp  Shader.h  (+10 more)
source/Rendering/GLFW/: CMakeLists.txt  GLFWRenderingDevice.cpp  GLFWRenderingDevice.h
source/System/: AutoResetEvent.cpp  AutoResetEvent.h  CMakeLists.txt  ConditionalVariable.cpp  ConditionalVariable.h  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h  Time.cpp  Time.h
tests/: BlackDogEngineTest.h  CMakeLists.txt  GeometryTests.h  MathTests.h  MetaFunctionTests.h  MetaVariableTests.h  ThreadTests.h  main.cpp
tests/MathLib/: CMakeLists.txt  Vector2Tests.cpp
